hu1/bshell/src/tokenparser.output
Terminals unused in grammar

    IF
    THEN
    ELSE
    FI


Grammar

    0 $accept: Line $end

    1 $@1: %empty

    2 Line: $@1 Command '\n'
    3     | '\n'
    4     | %empty

    5 Command: SimpleCommand
    6        | CommandSequence
    7        | CommandOr
    8        | CommandAnd
    9        | CommandPipe

   10 CommandSequence: SimpleCommand ';' SimpleCommand
   11                | SimpleCommand ';' CommandSequence

   12 CommandPipe: SimpleCommand '|' SimpleCommand
   13            | SimpleCommand '|' CommandPipe

   14 CommandAnd: SimpleCommand AND SimpleCommand
   15           | SimpleCommand AND CommandAnd

   16 CommandOr: SimpleCommand OR SimpleCommand
   17          | SimpleCommand OR CommandOr

   18 Redirections: %empty
   19             | Redirection Redirections

   20 Redirection: '>' TokenStringSequence
   21            | '<' TokenStringSequence
   22            | APPEND TokenStringSequence

   23 SimpleCommand: TokenStringSequence Redirections
   24              | TokenStringSequence Redirections '&'

   25 TokenStringSequence: StringType
   26                    | TokenStringSequence StringType

   27 StringType: STRING
   28           | UNDEF


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 2 3
    '&' (38) 24
    ';' (59) 10 11
    '<' (60) 21
    '>' (62) 20
    '|' (124) 12 13
    error (256)
    AND (258) 14 15
    OR (259) 16 17
    APPEND (260) 22
    IF (261)
    THEN (262)
    ELSE (263)
    FI (264)
    STRING <str> (265) 27
    UNDEF <str> (266) 28


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    Line (19)
        on left: 2 3 4
        on right: 0
    $@1 (20)
        on left: 1
        on right: 2
    Command <cmd> (21)
        on left: 5 6 7 8 9
        on right: 2
    CommandSequence <cmd> (22)
        on left: 10 11
        on right: 6 11
    CommandPipe <cmd> (23)
        on left: 12 13
        on right: 9 13
    CommandAnd <cmd> (24)
        on left: 14 15
        on right: 8 15
    CommandOr <cmd> (25)
        on left: 16 17
        on right: 7 17
    Redirections <list> (26)
        on left: 18 19
        on right: 19 23 24
    Redirection <redirection> (27)
        on left: 20 21 22
        on right: 19
    SimpleCommand <simple_cmd> (28)
        on left: 23 24
        on right: 5 10 11 12 13 14 15 16 17
    TokenStringSequence <tokseq> (29)
        on left: 25 26
        on right: 20 21 22 23 24 26
    StringType <str> (30)
        on left: 27 28
        on right: 25 26


State 0

    0 $accept: • Line $end

    '\n'  shift, and go to state 1

    $end      reduce using rule 4 (Line)
    $default  reduce using rule 1 ($@1)

    Line  go to state 2
    $@1   go to state 3


State 1

    3 Line: '\n' •

    $default  reduce using rule 3 (Line)


State 2

    0 $accept: Line • $end

    $end  shift, and go to state 4


State 3

    2 Line: $@1 • Command '\n'

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    Command              go to state 7
    CommandSequence      go to state 8
    CommandPipe          go to state 9
    CommandAnd           go to state 10
    CommandOr            go to state 11
    SimpleCommand        go to state 12
    TokenStringSequence  go to state 13
    StringType           go to state 14


State 4

    0 $accept: Line $end •

    $default  accept


State 5

   27 StringType: STRING •

    $default  reduce using rule 27 (StringType)


State 6

   28 StringType: UNDEF •

    $default  reduce using rule 28 (StringType)


State 7

    2 Line: $@1 Command • '\n'

    '\n'  shift, and go to state 15


State 8

    6 Command: CommandSequence •

    $default  reduce using rule 6 (Command)


State 9

    9 Command: CommandPipe •

    $default  reduce using rule 9 (Command)


State 10

    8 Command: CommandAnd •

    $default  reduce using rule 8 (Command)


State 11

    7 Command: CommandOr •

    $default  reduce using rule 7 (Command)


State 12

    5 Command: SimpleCommand •
   10 CommandSequence: SimpleCommand • ';' SimpleCommand
   11                | SimpleCommand • ';' CommandSequence
   12 CommandPipe: SimpleCommand • '|' SimpleCommand
   13            | SimpleCommand • '|' CommandPipe
   14 CommandAnd: SimpleCommand • AND SimpleCommand
   15           | SimpleCommand • AND CommandAnd
   16 CommandOr: SimpleCommand • OR SimpleCommand
   17          | SimpleCommand • OR CommandOr

    AND  shift, and go to state 16
    OR   shift, and go to state 17
    ';'  shift, and go to state 18
    '|'  shift, and go to state 19

    $default  reduce using rule 5 (Command)


State 13

   23 SimpleCommand: TokenStringSequence • Redirections
   24              | TokenStringSequence • Redirections '&'
   26 TokenStringSequence: TokenStringSequence • StringType

    APPEND  shift, and go to state 20
    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6
    '>'     shift, and go to state 21
    '<'     shift, and go to state 22

    $default  reduce using rule 18 (Redirections)

    Redirections  go to state 23
    Redirection   go to state 24
    StringType    go to state 25


State 14

   25 TokenStringSequence: StringType •

    $default  reduce using rule 25 (TokenStringSequence)


State 15

    2 Line: $@1 Command '\n' •

    $default  reduce using rule 2 (Line)


State 16

   14 CommandAnd: SimpleCommand AND • SimpleCommand
   15           | SimpleCommand AND • CommandAnd

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    CommandAnd           go to state 26
    SimpleCommand        go to state 27
    TokenStringSequence  go to state 13
    StringType           go to state 14


State 17

   16 CommandOr: SimpleCommand OR • SimpleCommand
   17          | SimpleCommand OR • CommandOr

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    CommandOr            go to state 28
    SimpleCommand        go to state 29
    TokenStringSequence  go to state 13
    StringType           go to state 14


State 18

   10 CommandSequence: SimpleCommand ';' • SimpleCommand
   11                | SimpleCommand ';' • CommandSequence

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    CommandSequence      go to state 30
    SimpleCommand        go to state 31
    TokenStringSequence  go to state 13
    StringType           go to state 14


State 19

   12 CommandPipe: SimpleCommand '|' • SimpleCommand
   13            | SimpleCommand '|' • CommandPipe

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    CommandPipe          go to state 32
    SimpleCommand        go to state 33
    TokenStringSequence  go to state 13
    StringType           go to state 14


State 20

   22 Redirection: APPEND • TokenStringSequence

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    TokenStringSequence  go to state 34
    StringType           go to state 14


State 21

   20 Redirection: '>' • TokenStringSequence

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    TokenStringSequence  go to state 35
    StringType           go to state 14


State 22

   21 Redirection: '<' • TokenStringSequence

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    TokenStringSequence  go to state 36
    StringType           go to state 14


State 23

   23 SimpleCommand: TokenStringSequence Redirections •
   24              | TokenStringSequence Redirections • '&'

    '&'  shift, and go to state 37

    $default  reduce using rule 23 (SimpleCommand)


State 24

   19 Redirections: Redirection • Redirections

    APPEND  shift, and go to state 20
    '>'     shift, and go to state 21
    '<'     shift, and go to state 22

    $default  reduce using rule 18 (Redirections)

    Redirections  go to state 38
    Redirection   go to state 24


State 25

   26 TokenStringSequence: TokenStringSequence StringType •

    $default  reduce using rule 26 (TokenStringSequence)


State 26

   15 CommandAnd: SimpleCommand AND CommandAnd •

    $default  reduce using rule 15 (CommandAnd)


State 27

   14 CommandAnd: SimpleCommand • AND SimpleCommand
   14           | SimpleCommand AND SimpleCommand •
   15           | SimpleCommand • AND CommandAnd

    AND  shift, and go to state 16

    $default  reduce using rule 14 (CommandAnd)


State 28

   17 CommandOr: SimpleCommand OR CommandOr •

    $default  reduce using rule 17 (CommandOr)


State 29

   16 CommandOr: SimpleCommand • OR SimpleCommand
   16          | SimpleCommand OR SimpleCommand •
   17          | SimpleCommand • OR CommandOr

    OR  shift, and go to state 17

    $default  reduce using rule 16 (CommandOr)


State 30

   11 CommandSequence: SimpleCommand ';' CommandSequence •

    $default  reduce using rule 11 (CommandSequence)


State 31

   10 CommandSequence: SimpleCommand • ';' SimpleCommand
   10                | SimpleCommand ';' SimpleCommand •
   11                | SimpleCommand • ';' CommandSequence

    ';'  shift, and go to state 18

    $default  reduce using rule 10 (CommandSequence)


State 32

   13 CommandPipe: SimpleCommand '|' CommandPipe •

    $default  reduce using rule 13 (CommandPipe)


State 33

   12 CommandPipe: SimpleCommand • '|' SimpleCommand
   12            | SimpleCommand '|' SimpleCommand •
   13            | SimpleCommand • '|' CommandPipe

    '|'  shift, and go to state 19

    $default  reduce using rule 12 (CommandPipe)


State 34

   22 Redirection: APPEND TokenStringSequence •
   26 TokenStringSequence: TokenStringSequence • StringType

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    $default  reduce using rule 22 (Redirection)

    StringType  go to state 25


State 35

   20 Redirection: '>' TokenStringSequence •
   26 TokenStringSequence: TokenStringSequence • StringType

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    $default  reduce using rule 20 (Redirection)

    StringType  go to state 25


State 36

   21 Redirection: '<' TokenStringSequence •
   26 TokenStringSequence: TokenStringSequence • StringType

    STRING  shift, and go to state 5
    UNDEF   shift, and go to state 6

    $default  reduce using rule 21 (Redirection)

    StringType  go to state 25


State 37

   24 SimpleCommand: TokenStringSequence Redirections '&' •

    $default  reduce using rule 24 (SimpleCommand)


State 38

   19 Redirections: Redirection Redirections •

    $default  reduce using rule 19 (Redirections)
